2007-03-07  Frederic Crozat  <fcrozat@mandriva.com>

	reviewed by: Bastien and release-team.

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_with_subtitle):
	Fix audio only playback in audio/video container (ogg for instance).
	(Closes: #405883)

2007-03-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/totem-remote.c: (totem_remote_init):
	Don't allocate a lirc_config structure - LIRC will do that on its own.
	If lirc_readconfig fails, don't pass data to LIRC that it didn't
	create in the first place. (Closes: #415326)

2007-03-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Patch from Damien Carbery <damien.carbery@sun.com>
	to not use the "-q" grep option (Closes: #414961)

2007-03-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-resize.c: (bacon_resize_init):
	Hopefully fix crashes on startup when XRandR isn't supported,
	by checking the retval of the Extension query functions
	properly

2007-03-05  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Fix up unused/disabled code too.

2007-03-05  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	* src/totem-missing-plugins.c:
	(totem_missing_plugins_setup):
	  Fix build against GStreamer gst-plugins-base CVS.

2007-03-04  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (main):
	Call g_thread_init() very early to avoid the GSlice warning

	* src/plparse/xmllexer.c:
	* src/plparse/xmllexer.h:
	* src/plparse/xmlparser.c:
	* src/plparse/xmlparser.h: Add a copy of the xine-lib XML parser
	under the LGPL

	* src/plparse/Makefile.am:
	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry),
	(parse_asx_entries), (totem_pl_parser_add_asx):
	* src/plparse/totem-pl-parser.c:
	Use the xine-lib XML parser copy, to allow:
	- case mismatches
	- HTML comments
	- broken escaping in URLs

	(Closes: #386558)

2007-03-01  Christian Persch  <chpe@svn.gnome.org>
