@@ -26,6 +26,7 @@
 #include <libgnomevfs/gnome-vfs-mime-handlers.h>
 #include <libgnomevfs/gnome-vfs-mime-info.h>
 #include <libgnomevfs/gnome-vfs-utils.h>
+#include <dlfcn.h>
 
 #include "npapi.h"
 #include "npupp.h"
@@ -365,6 +366,18 @@ NP_Initialize (NPNetscapeFuncs * aMozillaFuncs,
 		return NPERR_INVALID_FUNCTABLE_ERROR;
 	if (plugin_funcs->size < sizeof (NPPluginFuncs))
 		return NPERR_INVALID_FUNCTABLE_ERROR;
+
+	/* we want to open libdbus-glib-1.so.2 in such a way
+	 * in such a way that it becomes permanentely resident */
+	void *handle;
+	handle = dlopen ("libdbus-glib-1.so.2", RTLD_NOW | RTLD_NODELETE);
+	if (!handle) {
+		fprintf (stderr, "%s\n", dlerror()); 
+		return NPERR_MODULE_LOAD_FAILED_ERROR;
+	}
+	/* RTLD_NODELETE allows us to close right away ... */
+	dlclose(handle);
+
 
 	/*
 	 * Copy all of the fields of the Mozilla function table into our
