@@ -1,3 +1,11 @@
+2007-03-09  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemPlugin.cpp:
+	* browser-plugin/totemPluginGlue.cpp: Patch from
+	Alexander Sack <asac@jwsdot.com> to keep the dbus-glib
+	library in memory, to avoid crashes when switching themes
+	(Closes: #415389)
+
 2007-03-07  Frederic Crozat  <fcrozat@mandriva.com>
 
 	reviewed by: Bastien and release-team.
